# callbacks

./: CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.cpp
libs/include/: lamp.hpp  switch.hpp  switchCalableObject.hpp  tvSet.hpp
libs/src/: CMakeLists.txt  lamp.cpp  switch.cpp  tvSet.cpp
